@@ -1,3 +1,7 @@
+* Fri Sep 06 2019 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.2
+- Update Travis CI Pipeline to release using normal stages and curl commands
+  (e.g., without magic dpl providers)
+
 * Fri Aug 30 2019 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.1
 - Update diagnostic Travis API pipeline to 401 on empty PUPPETFORGE_API_TOKEN
 
